--- a/project 6 - music website by do some coding/style.css
+++ b/project 6 - music website by do some coding/style.css
@@ -156,13 +156,21 @@ nav ul li:hover {
   padding-top: 500px;
   display: grid;
   place-items: center;
-  gap: 50px;
   text-align: center;
   margin-bottom: 50px;
 }
 
+.about-music h3 {
+  margin-bottom: 1.4rem;
+}
+
 .about-music p {
   font-size: 18px;
+  margin-bottom: 1.4rem;
+}
+
+.about-music button {
+  margin-bottom: 1.4rem;
 }
 
 .video-section {
@@ -231,12 +239,9 @@ nav ul li:hover {
 }
 
 @media (max-width: 400px) {
-  header {
-    width: 25rem;
-  }
   header .container {
     flex-direction: column;
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   header .container .logo {
     font-size: 40px;
@@ -244,7 +249,6 @@ nav ul li:hover {
   }
   main .hero-section {
     height: 19rem;
-    width: 25rem;
     padding: 1rem;
   }
   .hero-section h1 {
@@ -259,7 +263,6 @@ nav ul li:hover {
   .music-section {
     font-size: 1rem;
     height: 27.5rem;
-    width: 25rem;
   }
   .music-section h4 {
     font-size: 0.7rem;
@@ -268,11 +271,10 @@ nav ul li:hover {
     font-size: 0.6rem;
   }
   .ipad-iphone-img img {
-    width: 20rem;
+    width: 15rem;
   }
   .about-music {
     padding-top: 10rem;
-    width: 25rem;
   }
   .about-music h3 {
     font-size: 2rem;
@@ -283,13 +285,12 @@ nav ul li:hover {
     margin: 0rem 1rem;
   }
   .about-music img {
-    width: 20rem;
+    width: 15rem;
   }
   .about-music button {
     margin: 1rem 0rem;
   }
   .video-section {
-    width: 25rem;
     height: 60rem;
   }
   .video-section h3 {
@@ -301,10 +302,9 @@ nav ul li:hover {
   .gift-section {
     margin-top: -20rem;
     flex-direction: column;
-    width: 25rem;
+    align-items: center;
   }
   .gift-section img {
-    margin: 0 4rem;
     width: 17rem;
   }
   .gift-section h3 {
@@ -315,17 +315,16 @@ nav ul li:hover {
     font-size: 0.7rem;
     padding: 2rem;
   }
-  .gift-section button {
-    margin-left: 9.8rem;
-  }
-  footer {
-    width: 25rem;
+  .gift-content .ok-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   footer h4 {
-    font-size: 0.6rem;
+    font-size: 0.4rem;
   }
   footer li {
-    font-size: 0.5rem;
+    font-size: 0.4rem;
   }
   .footer-lower p {
     font-size: 0.5rem;
@@ -333,12 +332,9 @@ nav ul li:hover {
 }
 
 @media (min-width: 401px) and (max-width: 800px) {
-  header {
-    width: 63rem;
-  }
   header .container {
     flex-direction: column;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
   }
   header .container .logo {
     font-size: 3rem;
@@ -346,7 +342,7 @@ nav ul li:hover {
   }
   main .hero-section {
     height: 19rem;
-    width: 63rem;
+
     padding: 1rem;
   }
   .hero-section h1 {
@@ -361,7 +357,6 @@ nav ul li:hover {
   .music-section {
     font-size: 1rem;
     height: 27.5rem;
-    width: 63rem;
   }
   .music-section h4 {
     font-size: 0.7rem;
@@ -374,7 +369,6 @@ nav ul li:hover {
   }
   .about-music {
     padding-top: 10rem;
-    width: 63rem;
   }
   .about-music h3 {
     font-size: 2rem;
@@ -391,7 +385,6 @@ nav ul li:hover {
     margin: 1rem 0rem;
   }
   .video-section {
-    width: 63rem;
     height: 60rem;
   }
   .video-section h3 {
@@ -402,8 +395,6 @@ nav ul li:hover {
   }
   .gift-section {
     margin-top: -8rem;
-
-    width: 63rem;
   }
   .gift-section img {
     margin: 0 4rem;
@@ -417,11 +408,13 @@ nav ul li:hover {
     font-size: 0.7rem;
     padding: 2rem;
   }
-  .gift-section button {
-    margin-left: 9.8rem;
+  .gift-content .ok-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  footer {
-    width: 63rem;
+  .footer-upper {
+    padding: 3rem;
   }
   footer h4 {
     font-size: 0.6rem;
@@ -435,9 +428,6 @@ nav ul li:hover {
 }
 
 @media (min-width: 801px) and (max-width: 1000px) {
-  header {
-    width: 63rem;
-  }
   header .container {
     flex-direction: column;
     font-size: 1.6rem;
@@ -448,7 +438,7 @@ nav ul li:hover {
   }
   main .hero-section {
     height: 19rem;
-    width: 63rem;
+
     padding: 1rem;
   }
   .hero-section h1 {
@@ -463,7 +453,6 @@ nav ul li:hover {
   .music-section {
     font-size: 1rem;
     height: 27.5rem;
-    width: 63rem;
   }
   .music-section h4 {
     font-size: 0.7rem;
@@ -476,7 +465,6 @@ nav ul li:hover {
   }
   .about-music {
     padding-top: 10rem;
-    width: 63rem;
   }
   .about-music h3 {
     font-size: 2rem;
@@ -493,7 +481,6 @@ nav ul li:hover {
     margin: 1rem 0rem;
   }
   .video-section {
-    width: 63rem;
     height: 60rem;
   }
   .video-section h3 {
@@ -504,13 +491,12 @@ nav ul li:hover {
   }
   .gift-section {
     margin-top: -8rem;
-
-    width: 63rem;
   }
   .gift-section img {
     margin: 0 4rem;
     width: 17rem;
   }
+
   .gift-section h3 {
     font-size: 2rem;
     margin: 0 auto;
@@ -518,12 +504,6 @@ nav ul li:hover {
   .gift-section p {
     font-size: 0.7rem;
     padding: 2rem;
-  }
-  .gift-section button {
-    margin-left: 9.8rem;
-  }
-  footer {
-    width: 63rem;
   }
   footer h4 {
     font-size: 0.6rem;
@@ -537,10 +517,6 @@ nav ul li:hover {
 }
 
 @media (min-width: 1000px) and (max-width: 1300px) {
-  header {
-    width: 69rem;
-    padding: 2rem;
-  }
   header .container {
     font-size: 1.6rem;
   }
@@ -550,7 +526,7 @@ nav ul li:hover {
   }
   main .hero-section {
     height: 19rem;
-    width: 69rem;
+
     padding: 1rem;
   }
   .hero-section h1 {
@@ -565,7 +541,6 @@ nav ul li:hover {
   .music-section {
     font-size: 1rem;
     height: 27.5rem;
-    width: 69rem;
   }
   .music-section h4 {
     font-size: 0.7rem;
@@ -578,7 +553,6 @@ nav ul li:hover {
   }
   .about-music {
     padding-top: 10rem;
-    width: 69rem;
   }
   .about-music h3 {
     font-size: 2rem;
@@ -595,7 +569,6 @@ nav ul li:hover {
     margin: 1rem 0rem;
   }
   .video-section {
-    width: 69rem;
     height: 60rem;
   }
   .video-section h3 {
@@ -607,7 +580,7 @@ nav ul li:hover {
   .gift-section {
     margin-top: -8rem;
 
-    width: 69rem;
+    width: 68rem;
   }
   .gift-section img {
     margin: 0 4rem;
@@ -624,9 +597,7 @@ nav ul li:hover {
   .gift-section button {
     margin-left: 9.8rem;
   }
-  footer {
-    width: 69rem;
-  }
+
   footer h4 {
     font-size: 0.6rem;
   }
@@ -635,5 +606,14 @@ nav ul li:hover {
   }
   .footer-lower p {
     font-size: 0.5rem;
+  }
+}
+
+@media (min-width: 1300px) {
+  header .container {
+    font-size: 1.6rem;
+  }
+  header .logo {
+    font-size: 3.5rem;
   }
 }
